# zombie-cafe-revival

./: .gitignore  README.md  debug.keystore  go.work  go.work.sum
server/: Makefile  go.mod  main.go  worker.go
server/endpoints/: endpoints.go  facebook_graph_me.go  facebook_rest_server.go  get_game_state.go  get_gifts.go  get_metadata.go  get_random_game_state.go  get_timestamp.go  got_gifts.go  no_response.go  save_game_state.go  unknown_request.go
server/storage/: storage.go
src/: AndroidManifest.xml  apktool.yml
src-jp/: AndroidManifest.xml  apktool.yml
src-jp/assets/: EULA
src-jp/assets/data/: about.html  animationData.bin.mid  characterArt.bin.mid  characterArt2.bin.mid  characterArt3.bin.mid  characterArt4.bin.mid  characterArt5.bin.mid  characterData.bin.mid  colosseumItems.bin.mid  colosseumLayouts.bin.mid  (+10 more)
src-jp/original/: AndroidManifest.xml
src/assets/: EULA  EXIT  SB
src/lib/cpp/: CMakeLists.txt  Memory.cpp  Memory.h  README.md  ZombieCafe.cpp  ZombieCafeExtension.cpp
src/original/: AndroidManifest.xml
tool/build_tool/: go.mod  main.go
tool/cctpacker/: go.mod  readme.md
tool/file_types/: animation_data.go  binary_reader.go  binary_writer.go  cafe.go  cctexture.go  character.go  character_art.go  character_jp.go  file_types.go  food.go  friend_cafe.go  furniture.go  go.mod  image_offsets.go  packed_texture.go  save_game.go
tool/inspector/: binary_reader.go  file_structures.go  go.mod  main.go
tool/resource_manager/: README.md  go.mod  go.sum  main.go
tool/server/: .gitignore  Makefile  go.mod  go.sum  worker.go  wrangler.toml
(+8221 files in other folders)
